force-app/main/default/objects/Invention_Disclosure__c/Invention_Disclosure__c.object-meta.xml
<CustomObject>
    <label>Invention Disclosure</label>
    <nameField>
        <label>Invention Disclosure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invention Disclosures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>