force-app/main/default/objects/Invention_Disclosure__c/fields/Anticipated_Publication_Comment__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Publication_Comment__c</fullName>
    <label>Anticipated Publication Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>