force-app/main/default/objects/Invention_Disclosure__c/fields/Anticipated_Publication_Disclosure_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Publication_Disclosure_Date__c</fullName>
    <label>Anticipated Publication Disclosure Date</label>
    <type>Date</type>
</CustomField>