force-app/main/default/objects/Invention_Disclosure__c/fields/Conception_Comment__c.field-meta.xml
<CustomField>
    <fullName>Conception_Comment__c</fullName>
    <label>Conception Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>