force-app/main/default/objects/Invention_Disclosure__c/fields/Conception_Date__c.field-meta.xml
<CustomField>
    <fullName>Conception_Date__c</fullName>
    <label>Conception Date</label>
    <type>Date</type>
</CustomField>