force-app/main/default/objects/Invention_Disclosure__c/fields/Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Disclosure__c</fullName>
    <label>Disclosure</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Disclosure record type must match Invention Disclosure type</errorMessage>
        <filterItems>
            <field>Disclosure__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Invention_Disclosure</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Disclosure__c</referenceTo>
    <relationshipLabel>Invention Disclosures</relationshipLabel>
    <relationshipName>Invention_Disclosures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>