force-app/main/default/objects/Invention_Disclosure__c/fields/Disclosure_Anticipated_Publication__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Anticipated_Publication__c</fullName>
    <label>Anticipated Publication Disclosure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>