force-app/main/default/objects/Invention_Disclosure__c/fields/Disclosure_Oral_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Oral_Presentation__c</fullName>
    <label>Oral Presentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>