force-app/main/default/objects/Invention_Disclosure__c/fields/Disclosure_Part_Of_Thesis__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Part_Of_Thesis__c</fullName>
    <label>Part Of Thesis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>