force-app/main/default/objects/Invention_Disclosure__c/fields/Disclosure_Published_Or_Disclosed__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Published_Or_Disclosed__c</fullName>
    <label>Published Or Disclosed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>