force-app/main/default/objects/Invention_Disclosure__c/fields/Disclosure_Reduced_To_Practice__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Reduced_To_Practice__c</fullName>
    <label>Reduced To Practice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>