force-app/main/default/objects/Invention_Disclosure__c/fields/Disclosure_Thesis_Hold__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Thesis_Hold__c</fullName>
    <label>Thesis Hold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>