force-app/main/default/objects/Invention_Disclosure__c/fields/First_Oral_Disclosure_Comment__c.field-meta.xml
<CustomField>
    <fullName>First_Oral_Disclosure_Comment__c</fullName>
    <label>First Oral Disclosure Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>