force-app/main/default/objects/Invention_Disclosure__c/fields/First_Publication_Comment__c.field-meta.xml
<CustomField>
    <fullName>First_Publication_Comment__c</fullName>
    <label>First Publication Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>