force-app/main/default/objects/Invention_Disclosure__c/fields/Invention_Categorization__c.field-meta.xml
<CustomField>
    <fullName>Invention_Categorization__c</fullName>
    <inlineHelpText>Consider common industry phrases and terms that best describe the invention and/or the problem that is being solved.</inlineHelpText>
    <label>Invention Categorization</label>
    <length>200</length>
    <type>Text</type>
</CustomField>