force-app/main/default/objects/Invention_Disclosure__c/fields/Materials_From_Other_Labs__c.field-meta.xml
<CustomField>
    <fullName>Materials_From_Other_Labs__c</fullName>
    <label>Materials From Other Labs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>