force-app/main/default/objects/Invention_Disclosure__c/fields/materialsFurtherComments__c.field-meta.xml
<CustomField>
    <fullName>materialsFurtherComments__c</fullName>
    <label>Materials Further Comments</label>
    <type>TextArea</type>
</CustomField>