force-app/main/default/objects/Invention_Disclosure__c/fields/Oral_Disclosure_Date__c.field-meta.xml
<CustomField>
    <fullName>Oral_Disclosure_Date__c</fullName>
    <label>Oral Disclosure Date</label>
    <type>Date</type>
</CustomField>