force-app/main/default/objects/Invention_Disclosure__c/fields/Reduced_To_Practice_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reduced_To_Practice_Comment__c</fullName>
    <label>Reduced To Practice Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>