force-app/main/default/objects/Invention_Disclosure__c/fields/Reduced_To_Practice_Date__c.field-meta.xml
<CustomField>
    <fullName>Reduced_To_Practice_Date__c</fullName>
    <label>Reduced To Practice Date</label>
    <type>Date</type>
</CustomField>