force-app/main/default/objects/Invention_Disclosure__c/fields/Thesis_Count__c.field-meta.xml
<CustomField>
    <fullName>Thesis_Count__c</fullName>
    <label>Thesis Count</label>
    <summaryForeignKey>Thesis__c.Invention_Disclosure__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>