force-app/main/default/objects/Invention_Disclosure__c/fields/Type_Of_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Presentation__c</fullName>
    <label>Type Of Presentation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronic Disclosure</fullName>
            </value>
            <value>
                <fullName>Oral Disclosure</fullName>
            </value>
            <value>
                <fullName>Written Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>