force-app/main/default/objects/Invention_Disclosure__c/validationRules/One_to_One_Relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>One_to_One_Relationship</fullName>
    <active>true</active>
    <errorConditionFormula>Thesis_Count__c &gt; 1</errorConditionFormula>
    <errorMessage>There can be only one Thesis per Invention Disclosure</errorMessage>
</ValidationRule>